# libsetila

./: BMP085.cpp  BMP085.h  CMakeLists.txt  HTS221.cpp  HTS221.h  I2CBus.cpp  I2CBus.h  I2CSensor.cpp  I2CSensor.h  INSTALL  LPS25H.cpp  LPS25H.h  Makefile  README.md  bus_master_device.cpp  libsetila.c  setila.h  setila_aux.cpp  setila_aux.h  setila_errors.h  setila_version.cpp  slave_device.cpp
devices/: ADT7410.cpp  BMP085.cpp  HTS221.cpp  L3GD20.cpp  LPS22HB.cpp  LPS25H.cpp  ST_Sensor.cpp  devices.mk  mcp3204.cpp  mcp9808.cpp  srf02.cpp
doc/html/: ADT7410_8h.html  ADT7410_8h__incl.map  ADT7410_8h__incl.md5  ADT7410_8h_source.html  BMP085_8cpp.html  BMP085_8h-example.html  BMP085_8h.html  BMP085_8h__dep__incl.map  BMP085_8h__dep__incl.md5  BMP085_8h__incl.map  BMP085_8h__incl.md5  BMP085_8h_source.html  CircularBuffer_8h.html  CircularBuffer_8h__incl.map  CircularBuffer_8h__incl.md5  CircularBuffer_8h_source.html  FIFO__queue_8h.html  FIFO__queue_8h__incl.map  HTS221_8cpp.html  (+621 more)
doxygen_conf/: DoxygenLayout.xml  HOWTO.txt  README.md  bdc.txt  doxyfile_libsetila  filters.txt
example/: Makefile  libsetila-BMP085.cpp  libsetila-SenseHAT.cpp  libsetila_example.c
i2c/: i2c.mk  i2c_bus.cpp  i2c_slave_device.cpp
include/: ADT7410.h  BMP085.h  HTS221.h  L3GD20.h  LPS22HB.h  LPS25H.h  ST_sensor.h  bus_master_device.h  i2c_bus.h  i2c_bus_master.h  i2c_slave_device.h  mcp3204.h  mcp9808.h  setila.h  setila_aux.h  setila_errors.h  setila_i2c.h  setila_spi.h  setila_version.h  slave_device.h  spi_bus.h  spi_bus_master.h  spi_slave_device.h  srf02.h
spi/: spi.mk  spi_bus.cpp  spi_bus_master.cpp  spi_slave_device.cpp
translations/: README_mk.md
(+30 files in other folders)
